<resources>
    <string name="app_name">TaskDesignTheChance</string>

    <string name="todo">todo</string>
    <string name="ahmad_batal">Ahmad Batal</string>
    <string name="engineer">Engineer</string>
    <string name="uk">UK</string>
    <string name="reviews">(150 Reviews)</string>
    <string name="rating">4.5</string>
    <string name="_3_hr">3 hr</string>
    <string name="_5_days_ago">5 Days ago</string>
    <string name="syrian">Syrian</string>

</resources>