<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_weight="10"
    android:padding="@dimen/_10sdp"
    android:layout_columnWeight="10"
    android:backgroundTint="@color/white"
    tools:context=".MainActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/main_item_card"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        app:cardCornerRadius="@dimen/items_corner"
        android:backgroundTint="@color/silver"
        app:strokeWidth="0dp"
        app:cardElevation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="@dimen/_10sdp">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_item_person"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardElevation="0dp"
                app:strokeWidth="0dp"
                app:cardCornerRadius="@dimen/items_corner"
                android:layout_weight="37">
                <ImageView
                    android:id="@+id/img_item_person"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/person"
                    android:contentDescription="@string/todo" />
            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="32"
                android:orientation="vertical"
                android:paddingStart="8dp"
                tools:ignore="RtlSymmetry">

                <TextView
                    android:id="@+id/txt_item_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="65"
                    android:text="@string/ahmad_batal"
                    android:layout_gravity="start"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="@dimen/txt_title_size"
                    tools:ignore="NestedWeights" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="82"/>

                <TextView
                    android:id="@+id/txt_item_occupation"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="68"
                    android:text="@string/engineer"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/navy_blue"
                    android:textSize="@dimen/txt_size"/>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="82"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="70"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="10dp"
                        android:layout_height="@dimen/_9sdp"
                        android:src="@drawable/location_icon"
                        android:scaleType="fitCenter"
                        android:contentDescription="@string/todo" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/uk"
                        android:textSize="@dimen/txt_size"
                        android:textColor="@color/txt_silver"/>
                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="82"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="67"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="34"
                        android:text="@string/reviews"
                        android:textSize="@dimen/txt_size"
                        android:textColor="@color/black"/>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="100"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="86"
                        android:text="@string/rating"
                        android:textSize="@dimen/txt_size"
                        android:fontFamily="@font/ro_regular"
                        android:textStyle="bold"
                        android:gravity="bottom"
                        android:textColor="@color/black" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="93"
                        android:src="@drawable/star_icon"
                        android:layout_gravity="center_vertical"
                        android:contentDescription="@string/todo" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="38"
                android:orientation="vertical"
                android:gravity="end">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card_bottom_hour"
                    android:layout_width="@dimen/_35sdp"
                    android:layout_height="@dimen/_18sdp"
                    android:backgroundTint="@color/red"
                    app:cardCornerRadius="@dimen/_45sdp"
                    app:strokeWidth="0dp"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:textStyle="bold">
                    <TextView
                        android:id="@+id/txt_hour"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/_3_hr"
                        android:textColor="@color/white"
                        android:gravity="center_vertical"
                        android:textAlignment="center"
                        tools:ignore="RtlCompat"
                        android:textSize="@dimen/txt_size"/>
                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:id="@+id/txt_item_country"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_20sdp"
                    android:text="@string/syrian"
                    android:gravity="center_vertical"
                    android:textAlignment="textEnd"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:textColor="@color/navy_blue"
                    android:textSize="@dimen/txt_size"
                    tools:ignore="RtlCompat" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_15sdp"
                    android:text="@string/_5_days_ago"
                    android:textSize="@dimen/txt_size"
                    android:gravity="center_vertical"
                    android:textAlignment="textEnd"
                    android:textColor="@color/silver_light"
                    tools:ignore="RtlCompat" />
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>